# sequence

./: .gitattributes  404.html  CNAME  README.md  extra.css  index.html  mkdocs.yml  schema.json  setup.cfg  setup.py  sitemap.xml
.github/workflows/: gh_pages.yml  pypi_release.yml
api/: index.html
collagen/: _version.py  vm.py
collagen/standard/: branching.py  loops.py  operators.py  other.py  stack_operations.py  types.py
collagen/standard/resources/: methods.py  variable.py
custom_theme/: main.html
custom_theme/partials/: favicon.html
custom_theme/partials/top-nav/: top.html
docs/: api.md  extra.css  index.md  procedure.md  sequence.md  std-data.md  std-methods.md  std.md
mkdocstrings_handlers/collagen/: handler.py
mkdocstrings_handlers/sequence/: handler.py
mkdocstrings_handlers/zvm/: handler.py
mkdocstrings_handlers/zvm/templates/terminal/: hints.html  ops.html
scratch/: run_mkdocs_serve.py
sequence/: __init__.py  _version.py  index.html  utils.py  vm.py
sequence/standard/: branching.py  loops.py  other.py  stack_operations.py
sequence/standard/resources/: hson.py  json.py  json5.py  variable.py
sequence/visitors/: iterator.py  load.py  run.py  tester.py
std/: index.html
tests/: imports.py  test_basic.py  test_svm.py  test_zvm.py
tests/data/: include-1.json
tests/json/: include-2.json  test-argument-order.json  test-conf.json  test-dereference.json  test-if-else.json  test-import-repeated.json  test-import.json  test-include.json  test-iter.json  test-local.json  test-parameters.json  test-recurse.json  test-routine-definition.json  test-routine-locals.json  test-std-algebra.json  test-std-begin.json  test-std-bool.json  test-std-compare.json  test-std-foreach.json  test-std-fstring.json  test-std-if.json  test-std-load-store-delete.json  test-std-load.json  test-std-pack-kwargs.json  test-std-stack.json  test-std-while.json  test-variables.json
zvm/: __init__.py  _version.py  cli.py  state.py  std.py  utils.py  vm.py  zvm.py
