[metadata]
name = zvm
description = An extensible dictionary-based virtual machine for scripting python with JSON
url = https://github.com/ieg-tech/zvm.git
license =

install_requires =
    rich
    versioneer

[options.extras_require]
develop =
    flake8
    pytest

[options.entry_points]
console_scripts =
    zvm = zvm.cli:main

[flake8]
extend-ignore = E722, E203
max-line-length = 127

[versioneer]
VCS = git
style = pep440
versionfile_source = spacha/_version.py
versionfile_build = spacha/_version.py
