[metadata]
name = zvm
description = A virtual stack machine that executes Python code based on instructions provided in a JSON file.
url = https://github.com/ieg-tech/zvm.git
license =

install_requires =
    versioneer


[options]
packages =
    zvm
    mkdocstrings_handlers.zvm

[options.extras_require]
develop =
    flake8
    pytest
docs =
    mkdocs
    mkdocstrings[python]
    mkdocs-terminal

[options.entry_points]
console_scripts =
    zvm = zvm.cli:main

[flake8]
extend-ignore = E722, E203
max-line-length = 127

[versioneer]
VCS = git
style = pep440
versionfile_source = spacha/_version.py
versionfile_build = spacha/_version.py
