[metadata]
name = zvm
description = A virtual stack machine that executes Python code based on instructions provided in a JSON file.
url = https://github.com/ieg-tech/zvm.git
license =

install_requires =
    versioneer


[options]
packages =
    zvm
    mkdocstrings_handlers.zvm
include_package_data = True

[options.extras_require]
develop =
    flake8
    pytest
docs =
    mkdocs
    mkdocstrings[python]
    mkdocs-terminal
json5 =
    json5
hjson =
    hjson

[options.entry_points]
console_scripts =
    zvm = zvm.cli:main

[options.package_data]
mkdocstrings_handlers.zvm =
    templates/terminal/*.html

[flake8]
extend-ignore = E722, E203
max-line-length = 127

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = zvm/_version.py
versionfile_build = zvm/_version.py
